docs for more user routes
/users - post, get, put
/users/sublectures/:lid - post
/users/login - post
